<resources>
    <string name="app_name">HRO opendag</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CMI</string>
    <string name="nav_header_subtitle">Hogeschool Rotterdam</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="open_day">Open day</string>
    <string name="information">Information</string>
    <string name="general_information">About CMI</string>
    <string name="floorplans">Floorplans</string>
    <string name="settings">Settings</string>
    <string name="my_contact">Question Form</string>
    <string name="my_events">My events</string>
    <string name="programming_test">Programming Test</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_openday">Openday</string>

    <string name="title_activity_general_information">generalInformation</string>

    <string name="title_activity_contact_form">Question Form</string>
    <string name="title_activity_floor_plan">Floor plan</string>


    <string name="title_activity_study_program_screen">Informatica</string>

    <string name="title_activity_popup" />

    <string name="anti_warning" />

    <!--HOME SCREEN-->
    <string name="hro_home_title_1">Overtref</string>
    <string name="hro_home_title_2">jezelf</string>
    <string name="hro_home_main">Open days:</string>
    <!--Buttons-->
    <string name="hro_Home_btn1_txt">04 April 2019</string>
    <string name="hro_Home_btn2_txt">24 April 2019</string>
    <string name="hro_Home_btn3_txt">04 June 2019</string>


    <string name="title_activity_openday2">openday</string>
    <string name="title_activity_communicatie">Communicatie</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_openday3">openday</string>
    <string name="title_activity_technische_informatica">Technische Informatica</string>
    <string name="title_activity_cmgt">Creative Media and Game Technologies</string>
    <string name="title_activity_camd">Communication and Multimedia Design</string>
    <string name="title_activity_quiz">quizActivity</string>
    <string name="title_activity_quiz__cmgt">quiz_CMGT</string>

    <string name="room_popup_title">Classroom information</string>
    <string name="room_popup_text">Here must come more information about the classroom</string>
    <string name="facebook_app_id">590328121489625</string>
    <string name="facebook_login_protocol_scheme">fb430604157490006</string>
    <string-array name="Buildings">
        <item>H-Building</item>
        <item>WD-Building</item>
        <item>WN-Building</item>
    </string-array>

    <string-array name="Floors">
        <item>Ground Floor</item>
        <item>First Floor</item>
        <item>Second Floor</item>
        <item>Third Floor</item>
        <item>Fourth Floor</item>
        <item>Fifth Floor</item>
    </string-array>

    <string-array name="Floors2">
        <item>Ground Floor</item>
        <item>First Floor</item>
        <item>Second Floor</item>
        <item>Third Floor</item>
        <item>Fourth Floor</item>
        <item>Fifth Floor</item>
        <item>Sixth Floor</item>
    </string-array>
</resources>
