<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_openday"
            android:title="@string/open_day" />
        <item
            android:id="@+id/nav_information"
            android:title="@string/information" />

        <item
            android:id="@+id/nav_generalInformation"
            android:title="@string/general_information" />
        <item
            android:id="@+id/nav_contact"
            android:title="@string/my_contact" />
        <item
            android:id="@+id/nav_floorPlans"
            android:title="@string/floorplans" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />

    </group>

</menu>
